# science

./: README.md  _config.yml  accordion_test.md  astrophysics.md  electromagnetism.md  footer.md  fun.html  fun.md  geometry.md  header.md  index.md  inline.md  kinematics.md  mathematics.html  mathematics.md  nature.md  new_home.html  new_home.md  physics.html  pyproject.toml  quantumphysics.md  relativity.md  test.md  thermodynamics.md
_includes/: breadcrumbs.html  head-custom.html  mathjax_support.html  new_window_fix.html  share_buttons.html
_layouts/: default.html
astrophysics/: astrophysics.md  daylight_variations.md  galactic_collision.js  galactic_collision.md  galaxy-renderer-bundle.js  index.md  keplers_law.md  nightsky.js  nightsky.md  planets.md  pulsar.md  saturn_rings.md  solar_system.js  solar_system.md  spiral_galaxy.js  spiral_galaxy.md  spiral_galaxy_renderer.html  star_cluster.js  star_cluster.md  three_body.md  xray_binary.md
dla/: 2d_diffusion_limited_aggregation.md  3d_diffusion_limited_aggregation.md  coral_2d.js  coral_2d.md  coral_3d.js  coral_3d.md  diffusion_limited_aggregation.md  index.md
electromagnetism/: antenna.js  antenna.md  charged_disk.md  charged_ring.js  charged_ring.md  charged_rings.md  charged_rod.js  charged_rod.md  charged_sheet.js  charged_sheet.md  dipole_field.js  dipole_field.md  disk_builder.md  electromagnetic_wave.md  electromagnetic_wave_quiver.js  electromagnetic_wave_quiver.md  electromagnetism.md  faradays_law.js  faradays_law.md  helical_motion.js  helical_motion.md  index.md  moving_charge.js  moving_charge.md  (+6 more)
(+868 files in other folders)
