[tool.poetry]
name = "Science"
version = "0.1.0"
description = "Interactive simulations for physics and mathematics"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
vpython = "^7.6.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
