[tool.poetry]
name = "Science"
version = "0.1.0"
description = "Interactive simulations for physics and mathematics"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
vpython = "^7.6.5"
chess = "^1.11.1"
tqdm = "^4.67.1"
vtk = "^9.4.1"
pygame = "^2.6.1"
pillow = "^11.1.0"
numpy = "^2.2.4"
plotly = "^6.0.1"umba = "^0.61.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
